--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -31,10 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Brief Profile of C. Dickens in 508 characters.\n",
+      "\n",
+      "Hello. My name is Charles Dickens.\n",
+      "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
+      "I am most famous as a writer of the victorian era.\n",
+      "I married Catherine Hogarth in 1836. We have ten children.\n",
+      "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
+      "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
+      "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.\n",
+      "SUCCESS! Yes, your output text matches the test text.\n"
+     ]
+    }
+   ],
    "source": [
+    "# Provided Variables\n",
     "name = \"CHARLES DICKENS\"\n",
     "dob = \"February 7, 1812\"\n",
     "birthplace = \"portsmouth, England\"\n",
@@ -47,23 +65,34 @@
     "death_date = \"June 9, 1870\"\n",
     "place_of_death = \"Gad's Hill Place, Kent, England\"\n",
     "\n",
-    "#Use the different methods that are given under 'REQUIREMENTS' to complete the code.\n",
+    "# Process the variables\n",
+    "name_title = name.title()\n",
+    "birthplace_title = birthplace.title()\n",
+    "other_talent_lower = other_talent.lower()\n",
     "\n",
+    "# Extract the first initial from the name\n",
+    "initial = name[0]\n",
     "\n",
+    "# Construct the output text\n",
+    "output_text = f'''A Brief Profile of {initial}. Dickens in 508 characters.\n",
     "\n",
+    "Hello. My name is {name_title}.\n",
+    "I am an English novelist. I was born on {dob}, in {birthplace_title}.\n",
+    "I am most famous as {famous_for.lower()}.\n",
+    "I married {married_to} in {year_of_marriage}. We have {number_of_children} children.\n",
+    "Some of my most famous works include {famous_works}.\n",
+    "Besides being a writer, my other talent was {other_talent_lower}.\n",
+    "I died on {death_date}, at my home in {place_of_death}.'''\n",
     "\n",
-    "\n",
-    "title = # The title of the output text should be stored in this variable\n",
-    "\n",
-    "output_text = # Your final output text should be stored in this variable, which will also include the 'title'.\n",
-    "\n",
+    "# Print the output text\n",
     "print(output_text)\n",
     "\n",
-    "test_text = f'''A Brief Profile of C. Dickens in 505 characters.\n",
+    "# Test to compare the output with the expected text\n",
+    "test_text = '''A Brief Profile of C. Dickens in 508 characters.\n",
     "\n",
     "Hello. My name is Charles Dickens.\n",
     "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
-    "I am most famous as a writer of the Victorian era.\n",
+    "I am most famous as a writer of the victorian era.\n",
     "I married Catherine Hogarth in 1836. We have ten children.\n",
     "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
     "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
@@ -92,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
