--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -31,35 +31,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Brief Profile of C. Dickens in 508 characters.\n",
+      "\n",
+      "Hello. My name is Charles Dickens.\n",
+      "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
+      "I am most famous as a writer of the Victorian era.\n",
+      "I married Catherine Hogarth in 1836. We have ten children.\n",
+      "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
+      "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
+      "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.\n",
+      "SUCCESS! Yes, your output text matches the test text.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"CHARLES DICKENS\"\n",
     "dob = \"February 7, 1812\"\n",
     "birthplace = \"portsmouth, England\"\n",
-    "famous_for = \"A writer of the Victorian era\"\n",
+    "famous_for = \"a writer of the Victorian era\"\n",
     "married_to = \"Catherine Hogarth\"\n",
     "year_of_marriage = \"1836\"\n",
     "number_of_children = \"ten\"\n",
     "famous_works = '\"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\"'\n",
-    "other_talent = \"doing DRAMATIC public readings of my work\"\n",
+    "other_talent = \"doing dramatic public readings of my work\"\n",
     "death_date = \"June 9, 1870\"\n",
     "place_of_death = \"Gad's Hill Place, Kent, England\"\n",
     "\n",
-    "#Use the different methods that are given under 'REQUIREMENTS' to complete the code.\n",
+    "# Constructing the title and output text\n",
+    "title = f\"A Brief Profile of {name[0]}. {name.title().split()[1]} in 508 characters.\"\n",
+    "output_text = f\"{title}\\n\\nHello. My name is {name.title()}.\\nI am an English novelist. I was born on {dob}, in {birthplace.title()}.\\nI am most famous as {famous_for}.\\nI married {married_to} in {year_of_marriage}. We have {number_of_children.lower()} children.\\nSome of my most famous works include {famous_works}.\\nBesides being a writer, my other talent was {other_talent}.\\nI died on {death_date}, at my home in {place_of_death}.\"\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "title = # The title of the output text should be stored in this variable\n",
-    "\n",
-    "output_text = # Your final output text should be stored in this variable, which will also include the 'title'.\n",
-    "\n",
+    "# Print the output text\n",
     "print(output_text)\n",
     "\n",
-    "test_text = f'''A Brief Profile of C. Dickens in 505 characters.\n",
+    "# Test text to compare\n",
+    "test_text = f'''A Brief Profile of C. Dickens in 508 characters.\n",
     "\n",
     "Hello. My name is Charles Dickens.\n",
     "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
@@ -69,10 +82,11 @@
     "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
     "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.'''\n",
     "\n",
+    "# Compare the two texts\n",
     "if output_text == test_text:\n",
     "    print(\"SUCCESS! Yes, your output text matches the test text.\")\n",
     "else:\n",
-    "    print(\"OOPS!!! Sorry, your output text does not match the test text.\")\n"
+    "    print(\"OOPS!!! Sorry, your output text does not match the test text.\")"
    ]
   }
  ],
@@ -92,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
